SERVER-38617: Do not timestamp ghost writes during rollback via refetch.